реализовал работу с Flow корутины. На главной странице сделал SearchView (позже будет перенесено в верхнее меню), которое запрашивает данные с StoreAmicum(ViewModel), которая предварительно инициализируется в отдельном потоке. Результат поиска возвращается на главную страницу, откуда берется первый результат из списка (позже это  все будет вынесено в отдельный компонент и реализован общий окомпонент поиска для всего приложения).
Прошу проверить соблюдение принципа чистой архитектуры в части работы поиска

--- a/app/src/main/res/values/autorization_strings.xml
+++ b/app/src/main/res/values/autorization_strings.xml
@@ -10,4 +10,5 @@
     <string name="chkActiveDirectory">Авторизация по ActiveDirectory</string>
     <string name="btnLogin">ВОЙТИ</string>
     <string name="smallLogo">Логотип</string>
+    <string name="hintSearch">Найти</string>
 </resources>
