--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -19,13 +19,8 @@
     <color name="NotificationLineDivision">#DADADA</color>
 
     <!--Тулбар поиска пример-->
-    <color name="material_light_primary_text">#DE000000</color>
-    <color name="material_light_hint_text">#61000000</color>
-    <color name="material_light_active_icon">#8A000000</color>
-    <color name="material_ripple_light">#1F000000</color>
-    <color name="divider_color">#1F000000</color>
-    <color name="active_icon_color">#8A000000</color>
-    <color name="cards_and_dialogs_color">@android:color/white</color>
-    <color name="quantum_grey_600">#757575</color>
+    <color name="divider_color">#1FFFFFFF</color>
+    <color name="active_icon_color">@android:color/white</color>
+    <color name="cards_and_dialogs_color">#424242</color>
     <!--end-->
 </resources>
