1. Покройте тестами MainActivity (кроме элементов RecyclerView — список мы будем тестировать позже): убедитесь, что все элементы видны и корректно отображаются, что надписи на кнопке и в EditText верные и т. д.; 2. Избавьтесь от проверки BuildConfig.TYPE == FAKE и разнесите разный код по разным классам в зависимости от Build Variants, как вы это делали на 12 занятии курса Андроид на Котлине.

--- a/app/src/main/res/layout/navigation_main_menu_fragment.xml
+++ b/app/src/main/res/layout/navigation_main_menu_fragment.xml
@@ -6,6 +6,6 @@
         android:id="@+id/navigationMainMenu"
         android:layout_width="300dp"
         android:layout_height="match_parent"
-
+        android:theme="@style/ThemeAmicumMobile"
         app:headerLayout="@layout/header_navigation_main_drawer" />
 
