--- a/app/src/main/res/layout/authorization_fragment.xml
+++ b/app/src/main/res/layout/authorization_fragment.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
-                                                   xmlns:tools="http://schemas.android.com/tools"
-                                                   android:layout_width="match_parent"
-                                                   android:layout_height="match_parent"
-                                                   android:background="@color/authorization_background_color">
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/authorization_background_color"
+        android:theme="@style/ThemeAmicumMobile">
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -31,7 +32,8 @@
                 app:layout_constraintTop_toTopOf="parent"
                 android:layout_marginTop="16dp"
                 android:layout_marginStart="16dp"
-                android:contentDescription="@string/smallLogo"/>
+                android:contentDescription="@string/smallLogo" />
+
         <com.google.android.material.button.MaterialButton
                 style="@style/MaterialButtonStyleWhiteBackground"
                 android:id="@+id/btnCloseApplication"
@@ -44,7 +46,8 @@
                 android:layout_marginTop="25dp"
                 android:background="#FFFFFF"
                 android:textColor="#EF7F1A"
-                android:fontFamily="@font/roboto_regular"/>
+                android:fontFamily="@font/roboto_regular" />
+
         <com.google.android.material.textview.MaterialTextView
                 android:text="@string/lblEntryInSystem"
                 android:id="@+id/lblEntryInSystem"
@@ -56,7 +59,8 @@
                 android:layout_marginStart="14dp"
                 android:textColor="#000000"
                 android:textSize="18sp"
-                android:fontFamily="@font/roboto_regular"/>
+                android:fontFamily="@font/roboto_regular" />
+
         <com.google.android.material.textview.MaterialTextView
                 android:text="@string/lblWelcome"
                 android:id="@+id/lblWelcome"
@@ -66,9 +70,9 @@
                 android:layout_marginStart="16dp"
                 android:textColor="#000000"
                 android:textSize="18sp"
-                android:fontFamily="@font/roboto_regular" app:layout_constraintTop_toBottomOf="@+id/lblEntryInSystem"
-                android:layout_marginTop="15dp"
-        />
+                android:fontFamily="@font/roboto_regular"
+                app:layout_constraintTop_toBottomOf="@+id/lblEntryInSystem"
+                android:layout_marginTop="15dp" />
 
         <com.google.android.material.textfield.TextInputLayout
                 style="@style/TextLayout"
@@ -80,14 +84,17 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 android:hint="@string/hintLogin"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/lblWelcome" android:layout_marginTop="24dp">
+                app:layout_constraintTop_toBottomOf="@+id/lblWelcome"
+                android:layout_marginTop="24dp">
+
             <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/txtLogin"
-                    tools:text="sdfgsdfg"
                     android:nextFocusDown="@id/layoutPwd"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:maxLines="1" android:lines="1" android:singleLine="true"/>
+                    android:maxLines="1"
+                    android:lines="1"
+                    android:singleLine="true" />
         </com.google.android.material.textfield.TextInputLayout>
 
 
@@ -101,7 +108,9 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 android:hint="@string/lblPwd"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/layoutLogin" android:layout_marginTop="24dp">
+                app:layout_constraintTop_toBottomOf="@+id/layoutLogin"
+                android:layout_marginTop="24dp">
+
             <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/txtPwd"
                     tools:text="sdfgsdfg"
@@ -109,7 +118,8 @@
                     android:inputType="textPassword"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:maxLines="1" android:lines="1"/>
+                    android:maxLines="1"
+                    android:lines="1" />
         </com.google.android.material.textfield.TextInputLayout>
 
 
@@ -122,7 +132,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/layoutPwd"
                 android:layout_marginTop="40dp"
-                android:layout_marginStart="16dp"/>
+                android:layout_marginStart="16dp" />
 
         <com.google.android.material.button.MaterialButton
                 android:id="@+id/btnLogin"
@@ -133,7 +143,7 @@
                 android:fontFamily="@font/roboto_regular"
                 app:layout_constraintTop_toBottomOf="@+id/checkBox"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"/>
+                app:layout_constraintStart_toStartOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
