--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -8,7 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="strokeColor">#598D9B</color>
     <color name="actionModeBackground">#6A7180</color>
-    <color name="notificationListBackground">#F5F5F5</color>
+    <color name="notificationListBackground">@color/black</color>
     <color name="notificationTitle">#B55A6E</color>
     <color name="app_bar_layout">#6A7180</color>
     <color name="white">#FFFFFFFF</color>
