--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="ThemeAmicumMobile" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="ThemeAmicumMobile" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/strokeColor</item>
         <item name="colorPrimaryVariant">@color/black</item>
@@ -13,5 +13,52 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+        <item name="android:textSize">14sp</item>
+        <item name="fontFamily">Roboto</item>
+        <item name="colorSurface">@color/black</item>
+        <item name="actionModeBackground">@color/black</item>
+        <item name="textInputStyle">@style/TextLayout</item>
+        <item name="materialButtonStyle">@style/MaterialButtonStyle</item>
+        <item name="navigationViewStyle">@style/NavigationView</item>
+        <item name="appBarLayoutStyle">@style/AppBarLayout</item>
+        <item name="android:navigationBarColor">@color/black</item>
+    </style>
+
+    <style name="MaterialButtonStyleMainMenu" parent="Widget.MaterialComponents.Button.UnelevatedButton">
+        <item name="backgroundTint">@color/quantum_grey_600</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:drawableTint">@color/white</item>
+        <item name="android:layout_marginStart">10dp</item>
+        <item name="android:layout_marginEnd">20dp</item>
+        <item name="android:padding">0sp</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:inputType">text</item>
+    </style>
+
+    <style name="NotificationListItem" parent="ThemeAmicumMobile">
+        <item name="android:layout_gravity">left</item>
+        <item name="android:layout_margin">20dp</item>
+        <item name="android:padding">10dp</item>
+        <item name="android:elevation">10dp</item>
+        <item name="android:background">@color/quantum_grey_600</item>
+    </style>
+
+    <style name="NotificationList.Title" parent="Widget.MaterialComponents.TextView">
+        <item name="android:gravity">center|start</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:paddingLeft">10dp</item>
+    </style>
+
+    <style name="Notification.TextViewLeft" parent="Widget.MaterialComponents.TextView">
+        <item name="android:gravity">center|start</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+
+    <style name="Notification.TextViewRight" parent="Widget.MaterialComponents.TextView">
+        <item name="android:gravity">center|end</item>
+        <item name="android:textSize">12sp</item>
+        <item name="android:textColor">@color/white</item>
     </style>
 </resources>
